--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
 @plugin "@tailwindcss/typography";
 @plugin "@iconify/tailwind4";
 
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -85,14 +86,14 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: var(--color-neutral-800);
   --foreground: oklch(0.985 0 0);
-  --card: var(--color-pink-800);
-  --card-foreground: oklch(0.985 0 0);
+  --card: var(--color-pink-950);
+  --card-foreground:  var(--color-pink-100);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: var(--color-pink-600);
-  --primary-foreground: var(--color-white);
+  --primary: var(--color-pink-950);
+  --primary-foreground: oklch(0.205 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
@@ -122,7 +123,6 @@
   * {
     @apply border-border outline-ring/50;
   }
-
   body {
     @apply bg-background text-foreground;
   }
